--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -8,7 +8,7 @@
 <h1>hello world</h1>
 <h2>hey you</h2>
 <h6>IGIHE</h6>
-...body text and more HTML5 tags go here...
+me and i myself
 <i>hello</i>
 <p> 
 <br>
